--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,113 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(70, 81, 129);
+  vertical-align: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.online-orders {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  padding: 0.5rem;
+}
+
+.button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  padding: 8px;
+}
+.App {
+  text-align: center;
+}
+
+.Logo {
+  width: 300px;
+  margin-bottom: -5vh;
+}
+
+.App-header {
+  background-color: #ffffff;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Averia Serif Libre', cursive;
+  text-transform: uppercase;
+  font-size: calc(10px + 1.2vmin);
+  color: #215191;
+  vertical-align: auto;
+  letter-spacing: 1px;
+}
+
+.input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding: 1rem;
+}
+
+.online-orders {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.button {
+  display: -ms-inline-flexbox;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  padding: 8px;
+  margin-top: 1.5rem;
+  background-color: #215191;
+  font-family: 'Averia Serif Libre', cursive;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.savings1 {
+  margin-top: 1rem;
+  margin-right: .5rem;
+  width: 50%;
+  align-content: center;
+}
+
+.savings2 {
+  margin-top: 1.5rem;
+  margin-right: .5rem;
+  width: 50%;
+  align-content: center;
+}
+
+.online-orders1 {
+  margin-right: 1rem;
+  width: 40%;
+}
+
+.online-orders2 {
+  margin-right: .5rem;
+  width: 70%;
 }
